[package]
name = "procmaps"
version = "0.1.0"
authors = ["Josh Abraham <sinisterpatrician@gmail.com>"]
description = "Crate for gathering currently mapped memory regions for a given PID"
keywords = ["unix", "memory", "process", "mappings", "proc"]
license = "MIT/Apache-2.0"
repository = "https://github.com/jabedude/procmaps"
documentation = "https://docs.rs/procmaps/0.1.0/procmaps/"
edition = "2018"

[dependencies]
nom = "4.1.1"
libc = "0.2.45"
