[package]
name = "procmaps"
version = "0.4.2"
authors = ["Josh Abraham <sinisterpatrician@gmail.com>"]
description = "Crate for gathering currently mapped memory regions for a given PID"
keywords = ["unix", "memory", "process", "mappings", "proc"]
categories = ["os::unix-apis", "memory-management"]
license = "MIT/Apache-2.0"
repository = "https://github.com/jabedude/procmaps"
documentation = "https://docs.rs/procmaps/"
edition = "2018"

[dependencies]
nom = "4.1.1"
libc = "0.2.45"
